--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ img{display:block; height:auto;}
 #wishlist-panel .yith-wcwl-form .wishlist-title-container{display:none;}
     /* tabla */
     ul.wishlist_table.mobile{padding-left:0; margin-top:40px; border-top:1px solid #464646;}
-    table.wishlist_table{width:100%; padding-top:40px;}
+    table.wishlist_table{width:100%; margin-top:40px; border-top:1px solid #464646;}
     /* cabecera de tabla */
     table.wishlist_table thead{display:none;}
     /* cuerpo de la tabla */
