--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ img{display:block; height:auto;}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter:hover{color:var(--wp--preset--color--title);}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
         /* páneles */
-        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; z-index:101;}
+        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; z-index:2;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
         #cart-panel.open{right:0;}
         #wishlist-panel.open{right:0;}
@@ -122,7 +122,7 @@ img{display:block; height:auto;}
 
 /* paneles carrito & wishlist */
 #cart-panel,
-#wishlist-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow-x:hidden; overflow-y:scroll; padding:var(--padding-cart-panel);}
+#wishlist-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow-x:hidden; overflow-y:scroll; padding:var(--padding-cart-panel); z-index:2;}
 #cart-panel::-webkit-scrollbar{display:none;}
 .close-panels{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
 /* wishlist */
