--- a/assets/css/my-account.css
+++ b/assets/css/my-account.css
@@ -1,1 +1,2 @@
-.page-template-my-woocommerce-account #main .container .section{padding:50px 0;}
+#main .container .section{padding:50px 0;}
+#main .container .section .woocommerce .woocommerce-form.woocommerce-form-login.login p.woocommerce-form-row{display:grid;}
