--- a/assets/css/my-account.css
+++ b/assets/css/my-account.css
@@ -1,2 +1,4 @@
 #main .container .section{padding:50px 0;}
+#main .container .section .woocommerce{width:min(100%, 500px); margin-inline:auto;}
+#main .container .section .woocommerce h2{margin-bottom:22px;}
 #main .container .section .woocommerce .woocommerce-form.woocommerce-form-login.login p.woocommerce-form-row{display:grid;}
