--- a/assets/css/pagination.css
+++ b/assets/css/pagination.css
@@ -7,10 +7,10 @@
 .navigation.pagination .nav-links .page-numbers,
 .woocommerce-pagination .page-numbers li .page-numbers{display:grid; place-content:center; width:43px; height:43px; color:var(--wp--preset--color--text); border:1px solid var(--wp--preset--color--line); box-sizing:border-box; border-radius:0; text-decoration:none; transition:all .3s ease;}
 .navigation.pagination .nav-links .page-numbers.current,
-.woocommerce-pagination .page-numbers li .page-numbers.current{background-color:var(--wp--preset--color--links); border:1px solid var(--wp--preset--color--links); color:var(--wp--preset--color--text);}
+.woocommerce-pagination .page-numbers li .page-numbers.current{border:1px solid var(--wp--preset--color--title); color:var(--wp--preset--color--title);}
 .navigation.pagination .nav-links .page-numbers.current:hover,
 .woocommerce-pagination .page-numbers li .page-numbers.current:hover{color:var(--wp--preset--color--text);}
 .navigation.pagination .nav-links .page-numbers:hover,
-.woocommerce-pagination .page-numbers li .page-numbers:hover{border:1px solid var(--wp--preset--color--links); color:var(--wp--preset--color--links);}
+.woocommerce-pagination .page-numbers li .page-numbers:hover{border:1px solid var(--wp--preset--color--title); color:var(--wp--preset--color--title);}
 :is(.navigation.pagination .nav-links, .woocommerce-pagination .page-numbers) :is(.page-numbers.prev, .page-numbers.next){width:auto; padding:0 30px;}
-:is(.navigation.pagination .nav-links, .woocommerce-pagination .page-numbers) :is(.page-numbers.prev, .page-numbers.next):hover{border:1px solid var(--wp--preset--color--line);}
+:is(.navigation.pagination .nav-links, .woocommerce-pagination .page-numbers) :is(.page-numbers.prev, .page-numbers.next):hover{border:1px solid var(--wp--preset--color--title);}
