--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -1,4 +1,5 @@
-/* tabla */
+main .container .section{padding:var(--categories-list--padding);}
+/* tabla de productos */
 .woocommerce-cart-form .woocommerce-cart-form__contents{width:100%;}
 .woocommerce-cart-form .woocommerce-cart-form__contents thead{display:none;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item{display:grid;}
